--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>HoneyCo</title>
 
   <!-- Stylesheets -->
+  <link href="bower_components/tether/dist/css/tether.min.css" rel="stylesheet">
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="bower_components/swipebox/src/css/swipebox.css" rel="stylesheet">
@@ -83,72 +84,74 @@
     </div>
   </div>
 
-  <div id="retirement" class="retirement">
-    <div class="section-image">
-      <img src="img/retirement.jpg">
-    </div>
-    <div class="sub-section">
-      <div class="description">
-        <h3>Rent a home, <br/>not a hallway</h3>
-        <p>HoneyCo rental homes are located in multigenerational neighborhoods. These homes offer the resident a
-          maintenance-free lifestyle, supported by smart home technology and connected to community. Make the most of
-          your unRetirement in a HoneyCo Home.</p>
-        <!--<a class="swipebox-video btn-yellow btn-watch">Watch Video</a> -->
-        <a class="btn-yellow" href="#connect" data-scroll>Learn More</a>
+  <div class="container-fluid">
+
+    <div id="retirement" class="row split-section retirement">
+      <div class="col-sm-12 col-md-6 image">
+      </div>
+      <div class="col-xs-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 text-xs-center text-md-left text">
+        <div class="inner">
+          <h3>Rent a home,</h3>
+          <h3>not a hallway</h3>
+          <p>HoneyCo rental homes are located in multigenerational neighborhoods. These homes offer the resident a
+            maintenance-free lifestyle, supported by smart home technology and connected to community. Make the most of
+            your unRetirement in a HoneyCo Home.</p>
+          <a class="btn-yellow" href="#connect" data-scroll>Learn More</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div id="security" class="security">
-    <img src="img/security.jpg">
-    <div class="description col-xs-12 col-sm-6">
-      <h3>The Internet of caring things.</h3>
-      <p>Technological obsolescence is obsolete. HoneyCo has built the universal connector of smart home features. We do
-        the research and the integration of the hardware so you don't have to. And when something better comes out,
-        we'll make sure it works for you.</p>
-      <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
-    </div>
-  </div>
-
-  <div id="community" class="community">
-    <div class="sub-section">
-      <div class="description">
-        <h3>unRetire</h3>
-        <p>Introducing <strong>HoneyCo Society</strong>: a unique human and online network of multi-generational members. Inspired by
-          volunteerism, continuing education, and wellness, the HoneyCo Society puts avenues of social engagement within
-          reach of any resident.
-          <br /><br />
-          Each resident selects a dedicated HoneyCo Ambassador. The HoneyCo Ambassador is your in-person, real-life
-          problem solver, activity coordinator, social connector, and expert listener.
-          <br /><br />
-          HoneyCo Society @Home is the digital counterpart to your HoneyCo Ambassador. Browse local and curated
-          activities online or message a friend.</p>
-        <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
+    <div id="security" class="row split-section security">
+      <div class="col-xs-12 col-sm-9 col-md-6 text">
+        <div class="inner text-xs-center text-sm-left">
+          <h3>The Internet of caring things<span class="pour-some-trademark-on-me">.<span class="trademark">TM</span></span></h3>
+          <p>Technological obsolescence is obsolete. HoneyCo has built the universal connector of smart home features. We do
+            the research and the integration of the hardware so you don't have to. And when something better comes out,
+            we'll make sure it works for you.</p>
+          </div>
       </div>
     </div>
-    <div class="section-image">
-      <img src="img/community.jpg">
-    </div>
-  </div>
 
-  <div id="connect" class="connect">
-    <h4>Get Connected. Stay Connected.</h4>
-    <p>Sign up to receive updates from HoneyCo and apply for early access</p>
-    <form id="connectForm" action="https://visitor2.constantcontact.com/api/signup" method="post">
-      <input type="hidden" name="ca" value="a7bd0f16-f28a-423e-a677-65119172bbe7" />
-      <input type="hidden" name="list" value="1049878716" />
-      <div class="input-group">
-        <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter your email for updates"
-               required>
-        <button id="connectSubmit" class="btn btn-lg" type="submit">Submit</button>
+    <div id="community" class="row split-section community">
+      <div class="col-xs-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 text-xs-center text-md-left text">
+        <div class="inner">
+          <h3>unRetire</h3>
+          <p>Introducing <strong>HoneyCo Society</strong>: a unique human and online network of multi-generational members. Inspired by
+            volunteerism, continuing education, and wellness, the HoneyCo Society puts avenues of social engagement within
+            reach of any resident.
+            <br /><br />
+            Each resident selects a dedicated HoneyCo Ambassador. The HoneyCo Ambassador is your in-person, real-life
+            problem solver, activity coordinator, social connector, and expert listener.
+            <br /><br />
+            HoneyCo Society @Home is the digital counterpart to your HoneyCo Ambassador. Browse local and curated
+            activities online or message a friend.</p>
+          <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
+        </div>
       </div>
-    </form>
+      <div class="col-xs-12 col-md-6 image">
+      </div>
+    </div>
+
+    <div id="connect" class="connect">
+      <h4>Get Connected. Stay Connected.</h4>
+      <p>Sign up to receive updates from HoneyCo and apply for early access</p>
+      <form id="connectForm" action="https://visitor2.constantcontact.com/api/signup" method="post">
+        <input type="hidden" name="ca" value="a7bd0f16-f28a-423e-a677-65119172bbe7" />
+        <input type="hidden" name="list" value="1049878716" />
+        <div class="input-group">
+          <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter your email for updates"
+                 required>
+          <button id="connectSubmit" class="btn btn-lg" type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+
   </div>
 
   <div class="footer">
     <img class="bg-logo" src="img/bg-logo.png">
     <div class="wrapper">
-      <div class="col-sm-offset-4 col-xs-12 col-sm-4">
+      <div class="offset-sm-4 col-xs-12 col-sm-4">
         <ul>
           <li><i class="fa fa-fw fa-phone"></i>&nbsp;(615) 266-5243</li>
           <li><i class="fa fa-fw fa-home"></i>&nbsp;331 54th Ave N.</li>
@@ -168,10 +171,12 @@
       <p>© 2016 HoneyCo Homes, All rights reserved.</p>
     </div>
   </div>
+
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="bower_components/tether/dist/js/tether.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/swipebox/src/js/jquery.swipebox.min.js"></script>
 <script src="js/bigslide.js"></script>
