--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
     <div id="security" class="row split-section security">
       <div class="col-xs-12 col-sm-9 col-md-6 text">
         <div class="inner text-xs-center text-sm-left">
-          <h3>The Internet of caring things<span class="pour-some-trademark-on-me">.<span class="trademark">TM</span></span></h3>
+          <h3>The Internet of caring things&trade;</h3>
           <p>Technological obsolescence is obsolete. HoneyCo has built the universal connector of smart home features. We do
             the research and the integration of the hardware so you don't have to. And when something better comes out,
             we'll make sure it works for you.</p>
+          <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
           </div>
       </div>
     </div>
@@ -149,14 +150,14 @@
   </div>
 
   <div class="footer">
-    <img class="bg-logo" src="img/bg-logo.png">
+    <img class="bg-logo-split" src="img/bg-logo.png">
     <div class="wrapper">
+
       <div class="offset-sm-4 col-xs-12 col-sm-4">
         <ul>
-          <li><i class="fa fa-fw fa-phone"></i>&nbsp;(615) 266-5243</li>
-          <li><i class="fa fa-fw fa-home"></i>&nbsp;331 54th Ave N.</li>
-          <li><i class="fa fa-fw"></i>&nbsp;Nashville, TN 37209</li>
-          <li><i class="fa fa-fw fa-envelope"></i>&nbsp;<a href="mailto:info@honeyco.com">info@honeyco.com</a></li>
+          <li><i class="fa fa-fw fa-phone"></i>(615) 266-5243</li>
+          <li><i class="fa fa-fw fa-home"></i>331 54th Ave N. <br/> Nashville, TN 37209</li>
+          <li><i class="fa fa-fw fa-envelope"></i><a href="mailto:info@honeyco.com">info@honeyco.com</a></li>
         </ul>
       </div>
       <div class="col-xs-12 col-sm-4">
