Added technology photo, changed margins a bit on split sections.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <nav class="nav-bar">
     <a class="navbar-brand nav-logo">
       <img src="img/logo.svg">
-      <span>HoneyCo</span><span class="hidden-sm-down"> Homes</span>    
+      <span>HoneyCo</span><span class="hidden-sm-down"> Homes</span>
     </a>
     <div class="nav navbar-nav nav-links">
       <div class="navbar-text hidden-md-down">
@@ -111,6 +111,10 @@
           <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
           </div>
       </div>
+    </div>
+
+    <div id="gallery" class="row gallery">
+        <img class="technology" src="img/technology.png">
     </div>
 
     <div id="community" class="row split-section community">
