added packages div

--- a/index.html
+++ b/index.html
@@ -131,6 +131,26 @@
       </div>
     </div>
 
+    <div id="carePackages" class="row split-section packages">
+      <div class="col-xs-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 col-lg-5 offset-lg 1 text-xs-center text-md-left text">
+        <div class="inner">
+          <h3>HoneyCo Care Packages</h3>
+          <p>Coloring book put a bird on it tote bag, bespoke schlitz trust fund raw denim plaid hell of sartorial polaroid. Poutine brooklyn heirloom drinking vinegar hammock master cleanse. Celiac occupy offal deep v, keytar helvetica leggings tumblr semiotics master cleanse readymade chia fam. </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-5 text">
+        <div class="inner">
+          <div class="shadow-card">
+            <h5>"Tilde wolf locavore, keytar la croix edison bulb chia sartorial health goth raclette intelligentsia pug."</h5>
+            <p>Jane Doe
+            <br>
+            Adult Caregiver
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="community" class="row split-section community">
       <div class="col-xs-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 text-xs-center text-md-left text">
         <div class="inner">
