Adding technology section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <ul class="nav-links">
     <li><a href="#retirement" class="big-slide-nav-link nav-link" data-scroll>About</a></li>
     <li><a href="#security" class="big-slide-nav-link nav-link" data-scroll>Your Home</a></li>
-    <li><a href="#gallery" class="big-slide-nav-link nav-link" data-scroll>Technology</a></li>
+    <li><a href="#technology" class="big-slide-nav-link nav-link" data-scroll>Technology</a></li>
     <li><a href="#community" class="big-slide-nav-link nav-link" data-scroll>Society</a></li>
     <li><a href="#connect" class="big-slide-nav-link nav-link" data-scroll>Join</a></li>
     <hr>
@@ -61,7 +61,7 @@
       <div class="navbar-text hidden-md-down">
         <a href="#retirement" class="nav-item nav-link" data-scroll>About</a>
         <a href="#security" class="nav-item nav-link" data-scroll>Your Home</a>
-        <a href="#gallery" class="nav-item nav-link" data-scroll>Technology</a>
+        <a href="#technology" class="nav-item nav-link" data-scroll>Technology</a>
         <a href="#community" class="nav-item nav-link" data-scroll>Society</a>
         <a href="#connect" class="nav-item nav-link" data-scroll>Join</a>
       </div>
@@ -113,8 +113,22 @@
       </div>
     </div>
 
-    <div id="gallery" class="row gallery">
-        <img class="technology" src="img/technology.png">
+    <div id="technology" class="row split-section technology" >
+      <div class="col-xs-12 text">
+        <div class="inner text-xs-center text-sm-center">
+          <h3>A smart home, at your fingertips</h3>
+          <p>Can't remember if you turned off the stove? Is the door locked?
+            No worries. With a HoneyCo Home, peace of mind is always at hand.</p>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="row technology-image">
+      <div class="col-xs-12">
+        <img src="img/technology.png">
+      </div>
     </div>
 
     <div id="community" class="row split-section community">
